--- a/module2/style.css
+++ b/module2/style.css
@@ -8,6 +8,7 @@ body {
     border: 1px solid black;
     margin-bottom: 20px;
     overflow: hidden;
+    position: relative;
 }
 
 .section-header {
