--- a/module2/style.css
+++ b/module2/style.css
@@ -1,40 +1,98 @@
-/* Reset some default styles to make sure our layout is consistent across browsers */
-body, h1, h2, h3, p {
-    margin: 0;
-    padding: 0;
+/* Apply box-sizing to all elements */
+* {
+  box-sizing: border-box;
 }
 
-/* Apply a basic body style */
 body {
-    font-family: 'Arial', sans-serif;
+  background-color: rgb(51, 232, 255);
 }
 
-/* Style for the header */
 h1 {
-    text-align: center;
-    margin: 20px 0;
+  font-size: 27px;
+  font-family: Georgia, serif;
+  text-align: center;
+  color: rgb(0, 0, 0);
+  margin-bottom: 30px;
 }
 
-/* Style for the row of sections */
-.row {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+p {
+  padding: 15px 5px 0px 5px;
+  font-family: 'Georgia', sans-serif;
+  font-size: 16px;
+  position: relative;
 }
 
-/* Style for each section */
 .section {
-    background-color: #f0f0f0;
-    border: 1px solid #000;
-    padding: 20px;
-    margin: 10px;
-    text-align: center;
+  background-color: rgb(150, 150, 150);
+  border: 2px solid black;
+  margin-top: 20px;
+  margin-right: 20px;
+  padding: 3px;
+  text-align: justify;
+  position: relative; /* Changed from absolute to relative */
 }
 
-/* Style for the section header */
-.section-header {
-    font-size: 1.2em;
-    font-weight: bold;
-    margin-bottom: 10px;
+span {
+  font-size: 20px;
+  width: 150px;
+  border: 1px solid black;
+  font-weight: bold;
+  text-align: center;
+  float: right;
+  top: 0;
+  right: 0;
+  margin: 0;
+  position: absolute;
 }
+
+#pp1 {
+  background-color: rgb(250, 150, 150);
+  color: rgb(0, 0, 0);
+}
+
+#pp2 {
+  background-color: rgb(250, 0, 0);
+  color: rgb(250, 250, 250);
+}
+
+#pp3 {
+  background-color: rgb(200, 200, 100);
+  color: rgb(0, 0, 0);
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+/* PC view */
+@media (min-width: 992px) {
+  .col-lg-4 {
+    width: 33.33%;
+    float: left;
+  }
+}
+
+/* Tablet view */
+@media (min-width: 768px) and (max-width: 991px) {
+  .col-md-6 {
+    width: 50%;
+    float: left;
+  }
+  .col-md-12 {
+    width: 100%;
+    float: left;
+  }
+}
+
+/* Mobile view */
+@media (max-width: 767px) {
+  .col-sx-12 {
+    float: left;
+    width: 100%;
+  }
+}
+
+
 
